@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	<!--   License Agreement for Jaeksoft Open Search Server -->
-	<!--   -->
-	<!--   Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft -->
-	<!--   -->
-	<!--   This file is part of Jaeksoft Open Search Server. -->
-	<!--   http://www.open-search-server.com -->
-	<!--   -->
-	<!--   Jaeksoft Open Search Server is free software: you can -->
-	<!--   redistribute it and/or modify it under the terms of  -->
-	<!--   the GNU General Public License as published by the -->
-	<!--   Free Software Foundation, either version 3 of the  -->
-	<!--   License, or (at your option) any later version. -->
-	<!--   -->
-	<!--   Jaeksoft Open Search Server is distributed in the -->
-	<!--   hope that it will be useful, but WITHOUT ANY  -->
-	<!--   WARRANTY; without even the implied warranty of -->
-	<!--   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. -->
-	<!--   -->
-	<!--   See the GNU General Public License for more details. -->
+<!-- License Agreement for Jaeksoft Open Search Server -->
+<!-- -->
+<!-- Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft -->
+<!-- -->
+<!-- This file is part of Jaeksoft Open Search Server. -->
+<!-- http://www.open-search-server.com -->
+<!-- -->
+<!-- Jaeksoft Open Search Server is free software: you can -->
+<!-- redistribute it and/or modify it under the terms of -->
+<!-- the GNU General Public License as published by the -->
+<!-- Free Software Foundation, either version 3 of the -->
+<!-- License, or (at your option) any later version. -->
+<!-- -->
+<!-- Jaeksoft Open Search Server is distributed in the -->
+<!-- hope that it will be useful, but WITHOUT ANY -->
+<!-- WARRANTY; without even the implied warranty of -->
+<!-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. -->
+<!-- -->
+<!-- See the GNU General Public License for more details. -->
 <parsers fileCrawlerDefault="FileSytem parser">
 	<parser name="FileSytem parser" class="com.jaeksoft.searchlib.parser.FileSystemParser"
 		sizeLimit="0" />
@@ -25,6 +25,7 @@
 		sizeLimit="8388608">
 		<contentType>application/msword</contentType>
 		<extension>doc</extension>
+		<extension>docx</extension>
 		<map>
 			<link source="author" target="content" />
 			<link source="author" target="contentExact" />
@@ -111,6 +112,24 @@
 			<link source="subject" target="contentExact" />
 			<link source="title" target="title" />
 			<link source="title" target="titleExact" />
+		</map>
+	</parser>
+	<parser name="RTF parser" class="com.jaeksoft.searchlib.parser.RtfParser"
+		sizeLimit="8388608">
+		<extension>rtf</extension>
+		<contentType>application/rtf</contentType>
+		<map>
+			<link source="content" target="content" />
+			<link source="content" target="contentExact" />
+		</map>
+	</parser>
+	<parser name="Text parser" class="com.jaeksoft.searchlib.parser.TextParser"
+		sizeLimit="8388608">
+		<extension>txt</extension>
+		<contentType>text/plain</contentType>
+		<map>
+			<link source="content" target="content" />
+			<link source="content" target="contentExact" />
 		</map>
 	</parser>
 </parsers>
